--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,6 +1,9 @@
-button{
+.contact{
+    display: flex;
     border:none;
-    -webkit-appearance: none;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 50px;
     background: var(--secondary-color);
@@ -13,7 +16,7 @@ button{
     cursor: pointer;
 }
 
-button::after{
+.contact::after{
     content:"Contactez nous";
     position: absolute;
     top: 0;
@@ -29,6 +32,6 @@ button::after{
     transform: translateX(-100%); 
 }
 
-button:hover::after{
+.contact:hover::after{
     transform: translateX(0);
 }
